# assignment_v16

./: .gitignore  README.md  pyproject.toml
alpha_assignment_mgmt/: __init__.py  check_workflow.py  e2e_test.py  fix_workflow.py  hooks.py  modules.txt  setup.py
alpha_assignment_mgmt/alpha_assignment_management/api/: ceo_dashboard.py  timesheet.py
alpha_assignment_mgmt/alpha_assignment_management/doctype/alpha_assignment_origination/: alpha_assignment_origination.js  alpha_assignment_origination.json  alpha_assignment_origination.py
alpha_assignment_mgmt/fish_production/: account_mapping.py  breeding_cycle.py  debug_state.py  setup_custom_fields.py  test_e2e_cycle.py  test_full_cycle.py
alpha_assignment_mgmt/fish_production/fixtures/: custom_fields_fish.json
alpha_assignment_mgmt/fixtures/: alpha_assignment_origination_workflow.json  custom_field.json  custom_fields.json  custom_html_block.json  dashboard_chart.json  doctype.json  number_card.json  report.json  workflow.json  workspace.json
alpha_assignment_mgmt/overrides/: appraisal.py  assignment_origination.py  communication.py  customer.py  project.py  task.py  timesheet.py
alpha_assignment_mgmt/public/css/: theme.css  workspace.css
alpha_assignment_mgmt/public/js/: breeding_cycle.js  ceo_dashboard.js  project.js  task.js  theme.js
alpha_assignment_mgmt/setup/: __init__.py  create_task_employee_field.py
alpha_assignment_mgmt/tasks/: delays.py  notifications.py  performance.py  sla.py
alpha_assignment_mgmt/tests/: test_integration.py
docs/: UI_TESTING_GUIDE.md
(+47 files in other folders)
